--- a/index.html
+++ b/index.html
@@ -1,7 +1,30 @@
 <!DOCTYPE html>
 <html>
 <body>
+<div class="site-header">
+  <div class="wrapper">
+    <a class="site-title" rel="author" href="/">VII<b class="command_prompt"></b><b class="blinking_cursor">_</b></a>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>I'm hosted with GitHub Pages.</p>      
+<h2>All Tags</h2>
+  <div class="tag-cloud">
+<a href="/tag/buffer-overflow/" class="set-2">buffer-overflow</a>
+    <a href="/tag/c/" class="set-2">c</a> <a href="/tag/code-analysis/" class="set-2">code-analysis</a> 
+    <a href="/tag/cryptography/" class="set-1">cryptography</a> 
+    <a href="/tag/exploit-development/" class="set-2">exploit-development</a> 
+    <a href="/tag/firewall/" class="set-1">firewall</a> <a href="/tag/forensics/" class="set-1">forensics</a> 
+    <a href="/tag/ftp/" class="set-1">ftp</a> <a href="/tag/git/" class="set-1">git</a> 
+    <a href="/tag/javascript/" class="set-1">javascript</a> <a href="/tag/js/" class="set-1">js</a> 
+    <a href="/tag/kernel-exploitation/" class="set-1">kernel-exploitation</a> <a href="/tag/ldap/" class="set-1">ldap</a> 
+    <a href="/tag/linux/" class="set-5">linux</a> <a href="/tag/nmap/" class="set-1">nmap</a> 
+    <a href="/tag/networking/" class="set-2">networking</a> <a href="/tag/php/" class="set-2">php</a> 
+    <a href="/tag/pivoting/" class="set-1">pivoting</a> <a href="/tag/python/" class="set-3">python</a> 
+    <a href="/tag/reverse-engineering/" class="set-1">reverse-engineering</a><a href="/tag/snmp/" class="set-1">snmp</a> 
+    <a href="/tag/sqli/" class="set-1">sqli</a> <a href="/tag/ssh/" class="set-3">ssh</a> 
+    <a href="/tag/steganography/" class="set-1">steganography</a> <a href="/tag/sudo/" class="set-1">sudo</a> 
+    <a href="/tag/suid/" class="set-1">suid</a> <a href="/tag/waf/" class="set-1">waf</a> 
+    <a href="/tag/web/" class="set-5">web</a> <a href="/tag/windows/" class="set-2">windows</a> 
+    <a href="/tag/windows-exploitation/" class="set-1">windows-exploitation</a>
+</div>
 </body>
-</html>
+</html> 
