--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <div class="site-header">
   <div class="wrapper">
     <a class="site-title" rel="author" href="/">VII<b class="command_prompt"></b><b class="blinking_cursor">_</b></a>
+    </div>
+   </div>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>      
 <h2>All Tags</h2>
