--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en"><head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1"><!-- Begin Jekyll SEO tag v2.5.0 -->
+
+  
 <body>
 <div class="site-header">
   <div class="wrapper">
