--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
  <link rel="canonical" href="https://vll.github.io/" />
  <meta property="og:url" content="https://vll.github.io/" />
  <meta property="og:site_name" content="Vll" />
+ <link rel="stylesheet" href="/assets/css/style.css"> 
+ </head> 
   
 <body>
 <div class="site-header">
