--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
  <link rel="canonical" href="https://vll.github.io/" />
  <meta property="og:url" content="https://vll.github.io/" />
  <meta property="og:site_name" content="Vll" />
- <link rel="stylesheet" href="/assets/css/style.css"> 
+ <link rel="stylesheet" href="/assets/style.css"> 
  </head> 
   
 <body>
