--- a/index.html
+++ b/index.html
@@ -26,10 +26,21 @@
     <a class="site-title" rel="author" href="/">Vll<b class="command_prompt"></b><b class="blinking_cursor">_</b></a>
     </div>
    </div>
-<h1>Matthew Reese</h1>
-<p>Cyber Security and Information Security Researcher</p> 
-<h2>All Tags</h2>
+  
+  <p>Cyber Security and Information Security Researcher</p> 
   <h7>Matthew Reese</h7>
+  
+  <main class="page-content" aria-label="Content">
+      <div class="wrapper">
+        <div class="author-box">
+<img src="/avatar.jpg" width="256px" height="256px" class="author-avatar" onclick="window.open('https://twitter.com/matthew_s_reese','_blank');">
+<h7>
+	Matthew Reese<br>
+	CyberSec/InfoSec enthusiast. <br>
+	Interested in knowing how things work/Interested in breaking them, always learning.
+</h7>
+</div>
+<h2>All Tags</h2>        
   <div class="tag-cloud">
 <a href="/tag/buffer-overflow/" class="set-2">buffer-overflow</a>
     <a href="/tag/c/" class="set-2">c</a> <a href="/tag/code-analysis/" class="set-2">code-analysis</a> 
