--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 <img src="/avatar.jpg" width="256px" height="256px" class="author-avatar" onclick="window.open('https://twitter.com/matthew_s_reese','_blank');">
 <h7>
 	Matthew Reese<br>
-	CyberSec/InfoSec enthusiast. <br>
-	Interested in knowing how things work/Interested in breaking them, always learning.
+	InfoSec Cyber Security researcher. <br>
+	I spend a great deal of time trying to breaking things and building them back up.
 </h7>
 </div>
 <h2>All Tags</h2>        
