--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 <h7>
 	Matthew Reese<br>
 	InfoSec Cyber Security researcher. <br>
-	I spend a great deal of time trying to breaking things and building them back up.
+	I spend a great deal of time trying to break things and building them back up.
 </h7>
 </div>
 <h2>All Tags</h2>        
   <div class="tag-cloud">
 <a href="/tag/buffer-overflow/" class="set-2">buffer-overflow</a>
-    <a href="/tag/c/" class="set-2">c</a> <a href="/tag/code-analysis/" class="set-2">code-analysis</a> 
+    <a href="/tag/c#/" class="set-2">c#</a> <a href="/tag/code-analysis/" class="set-2">code-analysis</a> 
     <a href="/tag/cryptography/" class="set-1">cryptography</a> 
     <a href="/tag/exploit-development/" class="set-2">exploit-development</a> 
     <a href="/tag/firewall/" class="set-1">firewall</a> <a href="/tag/forensics/" class="set-1">forensics</a> 
