--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <main class="page-content" aria-label="Content">
       <div class="wrapper">
         <div class="author-box">
-<img src="/avatar.jpg" width="256px" height="256px" class="author-avatar" onclick="window.open('https://twitter.com/matthew_s_reese','_blank');">
+<img src="/avatar.png" width="256px" height="256px" class="author-avatar" onclick="window.open('https://twitter.com/matthew_s_reese','_blank');">
 <h7>
 	Matthew Reese<br>
 	InfoSec Cyber Security researcher. <br>
