--- a/pen-test-basics/cracking-passwords.html
+++ b/pen-test-basics/cracking-passwords.html
@@ -37,7 +37,8 @@
 	I spend a great deal of time trying to break things and building them back up.
 </h7>
 </div>
-<h2>Password Cracking 101</h2>	      
+<h2>Password Cracking 101</h2>
+<img src="/pen-test-basics/pass01.png" width="256px" height="256px">	      
 	      
 <h2>All Tags</h2>        
   <div class="tag-cloud">
