--- a/pen-test-basics/cracking-passwords.html
+++ b/pen-test-basics/cracking-passwords.html
@@ -42,10 +42,12 @@
 However it is not a point and click use application. All commands must be run through the command prompt. As an example, 
 	we will crack the default password that comes with kali, which is "toor," or root backwards.<br></h7>	      
 	      
-	      <img src="/pen-test-basics/pass01.png" width="256px" height="256px">	      
+	      <img src="/pen-test-basics/pass01.png" width="256px" height="256px"><br>	      
+
 <code>cp /etc/passwd/ passwd<br>
-	cp /etc/shadow /shadow</code>	      
-<h2>All Tags</h2>        
+      cp /etc/shadow /shadow</code>	      
+
+	      <h2>All Tags</h2>        
   <div class="tag-cloud">
   <a href="/tag/linux/" class="set-5">linux</a> <a href="/tag/nmap/" class="set-1">nmap</a>
   <a href="/tag/password-cracking/" class="set-1">password-cracking</a>	  
