--- a/pen-test-basics/cracking-passwords.html
+++ b/pen-test-basics/cracking-passwords.html
@@ -40,7 +40,7 @@
 <h2>Password Cracking 101</h2>
 <h7>John the Ripper is known as the go to password cracking program. It's free and comes standard with Kali Linux.
 However it is not a point and click use application. All commands must be run through the command prompt. As an example, 
-	we will crack the default password that comes with kali, which is "toor," or root backwards.<br></h7>	      
+	we will crack the default password that comes with kali, which is "toor," or root backwards.<br><br></h7>	      
 	      
 	      <img src="/pen-test-basics/pass01.png"><br><br>	      
 
