--- a/pen-test-basics/cracking-passwords.html
+++ b/pen-test-basics/cracking-passwords.html
@@ -38,16 +38,18 @@
 </h7>
 </div>
 <h2>Password Cracking 101</h2>
+	      
 <h7>John the Ripper is known as the go to password cracking program. It's free and comes standard with Kali Linux.
 However it is not a point and click use application. All commands must be run through the command prompt. As an example, 
-	we will crack the default password that comes with kali, which is "toor," or root backwards.<br><br></h7>	      
+	we will crack the default password that comes with kali, which is "toor," or root backwards.<br><br></h7>
 	      
-	      <img src="/pen-test-basics/pass01.png"><br><br>	      
+<img src="/pen-test-basics/pass01.png"><br><br>	      
 
-<code>cp /etc/passwd/ passwd<br>
-      cp /etc/shadow /shadow</code>	      
+<code>cp /etc/passwd/ passwd<br>cp /etc/shadow /shadow</code>	
 
-	      <h2>All Tags</h2>        
+<img src="/pen-test-basics/pass02.png"><br><br>	      
+
+<h2>All Tags</h2>        
   <div class="tag-cloud">
   <a href="/tag/linux/" class="set-5">linux</a> <a href="/tag/nmap/" class="set-1">nmap</a>
   <a href="/tag/password-cracking/" class="set-1">password-cracking</a>	  
