--- a/pen-test-basics/cracking-passwords.html
+++ b/pen-test-basics/cracking-passwords.html
@@ -45,7 +45,7 @@ However it is not a point and click use application. All commands must be run th
 	      
 <img src="/pen-test-basics/pass01.png"><br><br>	      
 
-<code>cp /etc/passwd/ passwd<br>cp /etc/shadow /shadow</code>	
+<code>cp /etc/passwd/ passwd<br>cp /etc/shadow /shadow</code><br>	
 
 <img src="/pen-test-basics/pass02.png"><br><br>	      
 
