--- a/pen-test-basics/cracking-passwords.html
+++ b/pen-test-basics/cracking-passwords.html
@@ -47,7 +47,12 @@ However it is not a point and click use application. All commands must be run th
 
 <code>cp /etc/passwd/ passwd<br>cp /etc/shadow /shadow</code><br>	
 
-<img src="/pen-test-basics/pass02.png"><br><br>	      
+<img src="/pen-test-basics/pass02.png"><br><br>	 
+
+	      
+<code>john <file name><br>john crack_file</code><br>
+	      
+<img src="/pen-test-basics/pass03.png"><br><br>	      
 
 <h2>All Tags</h2>        
   <div class="tag-cloud">
