--- a/pen-test-basics/cracking-passwords.html
+++ b/pen-test-basics/cracking-passwords.html
@@ -49,10 +49,12 @@ However it is not a point and click use application. All commands must be run th
 
 <img src="/pen-test-basics/pass02.png"><br><br>	 
 
-	      
 <code>john <file name><br>john crack_file</code><br>
 	      
-<img src="/pen-test-basics/pass04.png"><br><br>	      
+<img src="/pen-test-basics/pass04.png"><br><br>	
+<h7>Finally, as you can see here, the output of the crack_file 
+	was: root:toor:0:0:/root:/bin/bash. The second bit, ‘toor’, is 
+	the password output of the john crack_file which reveals the password.</h7><br><br>	
 
 <h2>All Tags</h2>        
   <div class="tag-cloud">
