--- a/pen-test-basics/cracking-passwords.html
+++ b/pen-test-basics/cracking-passwords.html
@@ -47,7 +47,13 @@ However it is not a point and click use application. All commands must be run th
 
 <code>cp /etc/passwd/ passwd<br>cp /etc/shadow /shadow</code><br>	
 
-<img src="/pen-test-basics/pass02.png"><br><br>	 
+<img src="/pen-test-basics/pass02.png"><br><br>
+
+<h7>Basically, John the ripper takes the hashed passwords file, which contains the system's password, and then "decodes" it 
+	with the shadow file, which was used to obfuscate the password. John the Ripper is also capable of comparing the results with
+	      any list of known or commonly use passwords, such as the infamous 'Rock You' password list. However, there are so many passwords
+	      in this list, that I've often found this can actually slow down the process. It's best to check the list John has included or set by default first. Trust me, 
+	I once spent 36 hours cracking a password with the rock you list, then cracked the same password in an hour an a half with the default list. </h7><br><br>	      
 
 <code>john <file name><br>john crack_file</code><br>
 	      
