--- a/pen-test-basics/cracking-passwords.html
+++ b/pen-test-basics/cracking-passwords.html
@@ -64,7 +64,7 @@ However it is not a point and click use application. All commands must be run th
 
 <h2>All Tags</h2>        
   <div class="tag-cloud">
-  <a href="/tag/linux/" class="set-5">linux</a> <a href="/tag/nmap/" class="set-1">nmap</a>
+  <a href="/tag/linux/" class="set-5">linux</a> <a href="/tag/john-the-ripper/" class="set-1">john-the-ripper</a>
   <a href="/tag/password-cracking/" class="set-1">password-cracking</a>	  
 </div>
 </body>
