--- a/pen-test-basics/cracking-passwords.html
+++ b/pen-test-basics/cracking-passwords.html
@@ -58,9 +58,13 @@ However it is not a point and click use application. All commands must be run th
 <code>john <file name><br>john crack_file</code><br>
 	      
 <img src="/pen-test-basics/pass04.png"><br><br>	
-<h7>Finally, as you can see here, the output of the crack_file 
-	was: root:toor:0:0:/root:/bin/bash. The second bit, ‘toor’, is 
-	the password output of the john crack_file which reveals the password.</h7><br><br>	
+<h7>Finally, as you can see here, the output of the crack_file was: root:toor:0:0:/root:/bin/bash. The output can be viwed 
+	with the following command:</h7><br>
+	
+<code>john --show crack_file</code><br> or <code>john --show <file name></code><br>	
+	
+<h7>The default kali linux user name is root, followed by the second bit, ‘toor’, which 
+	was the default password output of the john crack_file which reveals the password.</h7><br><br>	
 
 <h2>All Tags</h2>        
   <div class="tag-cloud">
