--- a/pen-test-basics/cracking-passwords.html
+++ b/pen-test-basics/cracking-passwords.html
@@ -62,7 +62,7 @@ However it is not a point and click use application. All commands must be run th
 <code>john crack_file</code><br><br>
 	      
 <img src="/pen-test-basics/pass04.png"><br><br>	
-<h7>Finally, as you can see here, the output of the crack_file was: root:toor:0:0:/root:/bin/bash. The output can be viwed 
+<h7>Finally, as you can see here, the output of the crack_file was: root:toor:0:0:/root:/bin/bash. The output can be viewed 
 	with the following command:</h7><br><br>
 	
 <code>john --show crack_file</code><br><br>	
