--- a/pen-test-basics/cracking-passwords.html
+++ b/pen-test-basics/cracking-passwords.html
@@ -45,7 +45,9 @@ However it is not a point and click use application. All commands must be run th
 	      
 <img src="/pen-test-basics/pass01.png"><br><br>	      
 
-<code>cp /etc/passwd/ passwd<br>cp /etc/shadow /shadow</code><br> 
+<code>cp /etc/passwd/ passwd</code><br>
+<code>cp /etc/shadow /shadow</code><br>
+<code>unshadow passwd shadow > crack_file</code>	      
 	      
 <h7>The output file can named whatever you want, it doesn't have to be crack_file. It can be any output, but remember 
 	      you will need to type it into the command prompt, more than once, so you may want to come up with something 
