--- a/pen-test-basics/cracking-passwords.html
+++ b/pen-test-basics/cracking-passwords.html
@@ -47,7 +47,7 @@ However it is not a point and click use application. All commands must be run th
 
 <code>cp /etc/passwd/ passwd</code><br>
 <code>cp /etc/shadow /shadow</code><br>
-<code>unshadow passwd shadow > crack_file</code>	      
+<code>unshadow passwd shadow > crack_file</code><br><br>	      
 	      
 <h7>The output file can named whatever you want, it doesn't have to be crack_file. It can be any output, but remember 
 	      you will need to type it into the command prompt, more than once, so you may want to come up with something 
