--- a/pen-test-basics/cracking-passwords.html
+++ b/pen-test-basics/cracking-passwords.html
@@ -47,8 +47,8 @@ However it is not a point and click use application. All commands must be run th
 <h7>As you can see, there are few things happening, let me try to explain. You can see I have typed in the 
 	simple command, unshadow. Since I added nothing following it, it has returned the values, data, and 
 	the order of that information. Basically, what you need to know is that you must copy two sets of files, so that they can be
-	      combined, and then decoded. As you can see here, the next command entered is 'cp,' followed by the folder containing the
-	      passwords, and their shadows. Both of these files need to be copied using this command.</h7> <br><br>
+	      combined, and then decoded. As you can see here, the next command entered is 'cp,' followed by the folder, and what
+	you wish to name them. Both of these files need to be copied using this command.</h7> <br><br>
 <code>cp /etc/passwd/ passwd</code><br>
 <code>cp /etc/shadow /shadow</code><br>
 <code>unshadow passwd shadow > crack_file</code><br><br>	      
