--- a/pen-test-basics/cracking-passwords.html
+++ b/pen-test-basics/cracking-passwords.html
@@ -50,10 +50,11 @@ However it is not a point and click use application. All commands must be run th
 	      combined, and then decoded. As you can see here, the next command entered is 'cp,' followed by the folder, and what
 	you wish to name them. Both of these files need to be copied using this command.</h7> <br><br>
 <code>cp /etc/passwd/ passwd</code><br>
-<code>cp /etc/shadow /shadow</code><br>
+<code>cp /etc/shadow/ shadow</code><br>
 <code>unshadow passwd shadow > crack_file</code><br><br>	      
 	      
-<h7>The output file can named whatever you want, it doesn't have to be crack_file. It can be any output, but remember 
+<h7>You can now use the unshadow command, combining the two copied folders, and designating a name for the output file. The 
+	output file can be named whatever you want, it doesn't have to be crack_file. It can be any output, but remember 
 	      you will need to type it into the command prompt, more than once, so you may want to come up with something 
 	      simple, or an abbreviation.</h7><br><br>	      
 
