--- a/sandbox/ice-1.140.html
+++ b/sandbox/ice-1.140.html
@@ -37,11 +37,14 @@
 	I spend a great deal of time trying to break things and building them back up.
 </h7>
 </div>
+
 <h2>ICE 1.140</h2>
 	      
-<h7>Ice 1.140 is <br><br></h7>
+<h7>Ice 1.140 is a penetration testing enviroment, and purposely left with vulnerablites in order to teach younglings
+	the basics of penetration testing. It is considered to be low lovel of difficulty by those who designed it.<br><br></h7>
 	      
-<img src="/sandbox/ICE00.png"><br><br>	  
+<img src="/sandbox/ICE00.png"><br><br>	
+<h7></h7>	      
 <img src="/sandbox/ICE01.png"><br><br>
 	      <img src="/sandbox/ICE02.png"><br><br>
 	      <img src="/sandbox/ICE03.png"><br><br>
