--- a/sandbox/ice-1.140.html
+++ b/sandbox/ice-1.140.html
@@ -40,11 +40,16 @@
 
 <h2>ICE 1.140</h2>
 	      
-<h7>Ice 1.140 is a penetration testing enviroment, and purposely left with vulnerablites in order to teach younglings
-	the basics of penetration testing. It is considered to be low lovel of difficulty by those who designed it.<br><br></h7>
+<h7>Ice 1.140 is a penetration testing enviroment, purposely left with vulnerablites in order to teach younglings
+	the basics of penetration testing. The De-ICE vulnerability suites were created to give security testers 
+	a safe environment to test for security vulnerabilities. It is considered to be low lovel of difficulty 
+	by those who designed it.<br><br></h7>
 	      
 <img src="/sandbox/ICE00.png"><br><br>	
-<h7></h7>	      
+<h7>I use Virtualbox, where I've installed this version of De-ICE, and Kali Linux in forensics mode, in order to test for 
+	vulnerabilities, and used NAT network server to establish a connection. Virtual Box is a virtual machine used to
+	"sandbox" or isolate your work enviroment from your actual computer. 
+</h7>	      
 <img src="/sandbox/ICE01.png"><br><br>
 	      <img src="/sandbox/ICE02.png"><br><br>
 	      <img src="/sandbox/ICE03.png"><br><br>
