--- a/sandbox/ice-1.140.html
+++ b/sandbox/ice-1.140.html
@@ -48,7 +48,7 @@
 <img src="/sandbox/ICE00.png"><br><br>	
 <h7>I use Virtualbox, where I've installed this version of De-ICE, and Kali Linux in forensics mode, in order to test for 
 	vulnerabilities, and used NAT network server to establish a connection. Virtual Box is a virtual machine used to
-	"sandbox" or isolate your work enviroment from your actual computer. 
+	"sandbox" or isolate your work enviroment from your actual computer.<br><br> 
 </h7>	      
 <img src="/sandbox/ICE01.png"><br><br>
 	      <img src="/sandbox/ICE02.png"><br><br>
