--- a/sandbox/ice-1.140.html
+++ b/sandbox/ice-1.140.html
@@ -43,30 +43,33 @@
 <h7>Ice 1.140 is a penetration testing enviroment, purposely left with vulnerablites in order to teach younglings
 	the basics of penetration testing. The De-ICE vulnerability suites were created to give security testers 
 	a safe environment to test for security vulnerabilities. It is considered to be low lovel of difficulty 
-	by those who designed it.<br><br></h7>
+	by those who designed it. I use Virtualbox, where I've installed this version of De-ICE, and Kali Linux in forensics mode, in order to test for 
+	vulnerabilities, and used NAT network server to establish a connection. Virtual Box is a virtual machine used to
+	"sandbox" or isolate your work enviroment from your actual computer.<br><br></h7>
 	      
 <img src="/sandbox/ICE00.png"><br><br>	
-<h7>I use Virtualbox, where I've installed this version of De-ICE, and Kali Linux in forensics mode, in order to test for 
-	vulnerabilities, and used NAT network server to establish a connection. Virtual Box is a virtual machine used to
-	"sandbox" or isolate your work enviroment from your actual computer.<br><br> 
-</h7>	      
+<h7>To find the IP address assigned to De-ICE I first ran a basic ifconfig to 
+		      see which IP range had been assigned.
+</h7><br></br>	      
 <img src="/sandbox/ICE01.png"><br><br>
-	      <h7>To find the IP address assigned to De-ICE I first ran a basic ifconfig to 
-		      see which IP range had been assigned.</h7><br><br>
-	      <img src="/sandbox/ICE02.png"><br><br>
-	      <h7>Kali is using the 10.0.2.x range. So I then ran ‘netdiscover’ to look for other connections.</h7><br><br>
-	      <img src="/sandbox/ICE03.png"><br><br>
-	      <h7> We get four results, two of those are running Cadmus. I then ran nmap to see what services were running on them. 
+	      <h7>Kali is using the 10.0.2.x range. So I then ran ‘netdiscover’ to look for other connections. We get 
+		      four results, two of those are running Cadmus. I then ran nmap to see what services were running on them. 
 		      The first yielded no results but the second showed various open ports.</h7><br><br>
-	      <img src="/sandbox/ICE04.png"><br><br>
+	      <img src="/sandbox/ICE02.png"><br><br>
 	      <h7>I did one more scan on those specific open ports to see if I had missed anything. The results gave me a general 
 		      sense of what I was dealing with and I concluded that this was the correct server.</h7><br><br>
-	      <img src="/sandbox/ICE04.png"><br><br>
+	      <img src="/sandbox/ICE03.png"><br><br>
 	      <h7>Next, to establish what was running on the server I ran dirb to find 
-		      any databases running on the servers.</h7><br><br>
-	      <img src="/sandbox/ICE05.png"><br><br>
-	      <h7>We can see that a webserver is running and get a location for the forum page. Using ncat it’s possible to see that http 
+		      any databases running on the servers. We can see that a webserver is running and 
+		      get a location for the forum page. Using ncat it’s possible to see that http 
 		      on port 80 is definitely open and should be accessible through a standard web browser.</h7><br><br>
+	      <img src="/sandbox/ICE04.png"><br><br>
+	      <h7></h7><br><br>
+	      <img src="/sandbox/ICE04.png"><br><br>
+	      <h7></h7><br><br>
+	      <img src="/sandbox/ICE05.png"><br><br>
+	      <h7>If we open the address of the webserver in the browser we get the webpage ‘Lazy Admin.’ 
+		      This is the first thing accessible from the server.</h7><br><br>
 	      <img src="/sandbox/ICE06.png"><br><br>
 	      <h7></h7><br><br>
 	      <img src="/sandbox/ICE06.01.png"><br><br>
