--- a/sandbox/ice-1.140.html
+++ b/sandbox/ice-1.140.html
@@ -60,13 +60,11 @@
 		      sense of what I was dealing with and I concluded that this was the correct server.</h7><br><br>
 	      <img src="/sandbox/ICE03.png"><br><br>
 	      <h7>Next, to establish what was running on the server I ran dirb to find 
-		      any databases running on the servers. We can see that a webserver is running and 
-		      get a location for the forum page. Using ncat it’s possible to see that http 
-		      on port 80 is definitely open and should be accessible through a standard web browser.</h7><br><br>
+		      any databases running on the servers.</h7><br><br>
 	      <img src="/sandbox/ICE04.png"><br><br>
-	      <h7></h7><br><br>
+	      <h7>We can see that a webserver is running and get a location for the forum page.</h7><br><br>
 	      <img src="/sandbox/ICE04.png"><br><br>
-	      <h7></h7><br><br>
+	      <h7>Using ncat it’s possible to see that http on port 80 is definitely open and should be accessible through a standard web browser.</h7><br><br>
 	      <img src="/sandbox/ICE05.png"><br><br>
 	      <h7>If we open the address of the webserver in the browser we get the webpage ‘Lazy Admin.’ 
 		      This is the first thing accessible from the server.</h7><br><br>
