--- a/sandbox/ice-1.140.html
+++ b/sandbox/ice-1.140.html
@@ -147,8 +147,8 @@
 	      <img src="/sandbox/ICE34.png"><br><br>
 	      <h7> This vulnerability suite was designed to prove that though organizations 
 		      often believe security is good, it is in actuality penetrable. Not just through 
-		      lax security methods, but careless communication practices as well, revealed that human 
-		      beings careless behaviors are always an organizational vulnerability.
+		      lax security methods, but in combination with poor communication practices as well, revealing that it's oftenhuman 
+		      beings careless behaviors which create organizational vulnerabilities.
 </h7><br><br>
 
 
