--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <img src="/avatar.png" width="256px" height="256px" class="author-avatar" onclick="window.open('https://twitter.com/matthew_s_reese','_blank');">
 <h7>
 	Matthew Reese<br>
-	InfoSec Cyber Security Researcher<br>
+	Information Security Researcher<br>
 	I spend a great deal of time trying to break things. What a way to live. 
 </h7>
 </div>
